tests/neg-custom-args/captures/cc-existential-conformance.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/cc-existential-conformance.scala:8:24 --------------------
8 |  val y: A -> Fun[B^] = x // error
  |                        ^
  |                        Found:    (x : A -> A -> B^)
  |                        Required: A -> A -> B^{outer_cap}
  |
  | longer explanation available when compiling with `-explain`
